deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baserow
  namespace: baserow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: baserow
  template:
    metadata:
      labels:
        app: baserow
    spec:
      containers:
      - name: baserow
        image: baserow/baserow:1.8.1
        ports:
        - containerPort: 8000
          name: baserow
