postgre_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baserow-postgres
  namespace: baserow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: baserow-postgres
  template:
    metadata:
      labels:
        app: baserow-postgres
    spec:
      containers:
      - name: postgres
        image: postgres:13
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: baserow-postgres-pvc
