postgre_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: baserow-postgres-service
  namespace: baserow
spec:
  ports:
  - port: 5432
  selector:
    app: baserow-postgres
  clusterIP: None
