service.yaml
apiVersion: v1
kind: Service
metadata:
  name: baserow-service
  namespace: baserow
spec:
  selector:
    app: baserow 
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
