ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: baserow-ingress
  namespace: baserow
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
  - host: baserow.koden.bzh
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: baserow-service
            port:
              number: 80
  tls:
  - hosts:
    - baserow.koden.bzh
    secretName: baserow-tls
